buildscript{
    repositories{
        mavenCentral()
        maven{ url "https://jitpack.io" }
    }

    dependencies{
        classpath "com.github.Anuken.Arc:arc-core:$mindustryVersion"
        classpath "com.github.Anuken.Mindustry:core:$mindustryVersion"
        classpath "com.squareup:javapoet:$javapoetVersion"
        classpath "com.github.younggam:multi-lib:$multilibVersion"
        classpath "com.github.Anuken:jabel:$jabelVersion"
    }
}

allprojects{
    apply plugin: "java"
    apply plugin: "java-library"

    group = "com.github.avant"
    version = "0.1"

    ext{
        sdkVersion = "30"
        sdkRoot = System.getenv("ANDROID_HOME")
    }

    repositories{
        maven{ url "https://jitpack.io" }
        jcenter()
    }
}

configure(project(":annotations")){
    sourceCompatibility = 8
    targetCompatibility = 8

    tasks.withType(JavaCompile){
        targetCompatibility = 8
        sourceCompatibility = 8
    }
}

configure(subprojects - project(":annotations")){
    sourceCompatibility = 15
    targetCompatibility = 8

    tasks.withType(JavaCompile){
        sourceCompatibility = 15
        targetCompatibility = 8

        options.encoding("UTF-8")
        if(JavaVersion.current() != JavaVersion.VERSION_1_8){
            options.compilerArgs.addAll(['--release', '8', '--enable-preview'])
        }

        doFirst{
            options.compilerArgs = options.compilerArgs.findAll{ it != '--enable-preview' }
        }
    }
}
